[gd_scene load_steps=12 format=3 uid="uid://la1wru6pvnyy"]

[ext_resource type="Script" uid="uid://d1cseo7blcif2" path="res://source/client/ui/menus/guild/guild_menu.gd" id="1_njed6"]
[ext_resource type="Script" uid="uid://b6ywedmocoh7m" path="res://source/client/ui/menus/guild/create_guild_menu.gd" id="4_etk61"]
[ext_resource type="Script" uid="uid://c4k4emciy3q2w" path="res://source/client/ui/menus/guild/guild_members_panel.gd" id="5_p6bnm"]
[ext_resource type="Script" uid="uid://2wpfvi7bx1f5" path="res://source/client/ui/menus/guild/guild_more_panel.gd" id="6_p6bnm"]
[ext_resource type="Script" uid="uid://bm6lrtmnwjhqt" path="res://source/client/ui/menus/guild/guild_main.gd" id="7_7uocm"]
[ext_resource type="Texture2D" uid="uid://b3aawye7qcnj0" path="res://assets/sprites/guild_logos/wyvern.png" id="8_hymua"]
[ext_resource type="Script" uid="uid://jq00b5cd64yb" path="res://source/client/ui/menus/guild/my_guilds_panel.gd" id="8_l1nt1"]
[ext_resource type="Script" uid="uid://bvf0g8usqr6fh" path="res://source/client/ui/menus/guild/guild_details.gd" id="8_p6bnm"]
[ext_resource type="Script" uid="uid://cgx5ksu3t0j64" path="res://source/client/ui/menus/guild/edit_panel.gd" id="10_7uocm"]
[ext_resource type="Script" uid="uid://dwnvysyvvgbno" path="res://source/client/ui/menus/guild/guild_search.gd" id="10_hymua"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p6bnm"]
size = Vector2(64, 64)

[node name="GuildMenu" type="Control" node_paths=PackedStringArray("initial_panel", "nav_panels")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njed6")
initial_panel = NodePath("PanelContainer/MarginContainer/VBoxContainer/GuildMain")
nav_panels = [NodePath("PanelContainer/MarginContainer/VBoxContainer/GuildMain"), NodePath("PanelContainer/MarginContainer/VBoxContainer/GuildDetails"), NodePath("PanelContainer/MarginContainer/VBoxContainer/GuildMembers"), NodePath("PanelContainer/MarginContainer/VBoxContainer/GuildSearch"), NodePath("PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel"), NodePath("PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel"), NodePath("PanelContainer/MarginContainer/VBoxContainer/MyGuildsPanel"), NodePath("PanelContainer/MarginContainer/VBoxContainer/EditPanel")]

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(320, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Guilds"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "Back"

[node name="GuildMain" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("guild_search_panel", "guild_create_panel", "my_guilds_panel")]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_7uocm")
guild_search_panel = NodePath("../GuildSearch")
guild_create_panel = NodePath("../CreateGuildPanel")
my_guilds_panel = NodePath("../MyGuildsPanel")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
columns = 5

[node name="SearchGuildButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Search Guild"

[node name="CreateGuildButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create Guild"

[node name="MyGuildsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "My Guilds"

[node name="LeaderboardButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Leaderboard"

[node name="GuildHelpButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Guild help"

[node name="Button6" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "???"

[node name="Button7" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "???"

[node name="Button8" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "???"

[node name="Button9" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "???"

[node name="Button10" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "???"

[node name="GuildDetails" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("guild_members_panel", "guild_more_panel", "guild_name_label")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("8_p6bnm")
guild_members_panel = NodePath("../GuildMembers")
guild_more_panel = NodePath("../GuildMorePanel")
guild_name_label = NodePath("../Header/Label")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="GuildDisplay" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="GuildLogo" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("8_hymua")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_p6bnm")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_p6bnm")

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_p6bnm")

[node name="ExtraRichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "Leader: Unknown"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="GuildDescriptionRichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Guild description"

[node name="GuildStatsRichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Seasonal glory: 0
Kills: 0
Members: 1/25"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TagButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 55)
layout_mode = 2
text = "Tag"

[node name="MembersButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 55)
layout_mode = 2
text = "Members"

[node name="MoreButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 55)
layout_mode = 2
text = "More"

[node name="GuildMembers" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5_p6bnm")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMembers"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMembers/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/h_separation = 20
columns = 2

[node name="GuildMorePanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("guild_main", "edit_panel")]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_p6bnm")
guild_main = NodePath("../GuildMain")
edit_panel = NodePath("../EditPanel")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 20
columns = 2

[node name="AlliancesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
text = "Alliances"

[node name="UpgradeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
text = "Upgrade"

[node name="MembersButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
text = "Members"

[node name="GuildHouseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
text = "Guild House"

[node name="EditButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
text = "Edit"

[node name="LeaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
text = "Leave Guild"

[node name="EditPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("10_7uocm")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/EditPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("8_hymua")
expand_mode = 1

[node name="LogoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Change Logo"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Save Changes"

[node name="DescriptionEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Description"

[node name="GuildSearch" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("guild_details_panel")]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("10_hymua")
guild_details_panel = NodePath("../GuildDetails")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer"]
layout_mode = 2
text = "Search a guild"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter the guild name here"

[node name="SearchGuildButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer"]
layout_mode = 2
text = "Search huild"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer"]
layout_mode = 2
text = "Result"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateGuildPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("guild_details_panel")]
visible = false
custom_minimum_size = Vector2(320, 200)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_etk61")
guild_details_panel = NodePath("../GuildDetails")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create guild menu"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Guild name"

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="MyGuildsPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("guild_details_panel")]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("8_l1nt1")
guild_details_panel = NodePath("../GuildDetails")
metadata/_custom_type_script = "uid://c437u84bullo2"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyGuildsPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MyGuildsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer/SearchGuildButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildMain" method="_on_search_guild_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer/CreateGuildButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildMain" method="_on_create_guild_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildMain/GridContainer/MyGuildsButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildMain" method="_on_my_guilds_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer/HBoxContainer2/TagButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildDetails" method="_on_tag_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer/HBoxContainer2/MembersButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildDetails" method="_on_members_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildDetails/GuildDisplay/VBoxContainer/HBoxContainer2/MoreButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildDetails" method="_on_more_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer/EditButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel" method="_on_edit_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel/ScrollContainer/GridContainer/LeaveButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildMorePanel" method="_on_leave_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer/VBoxContainer/LogoButton" to="PanelContainer/MarginContainer/VBoxContainer/EditPanel" method="_on_logo_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/EditPanel/HBoxContainer/VBoxContainer/SaveButton" to="PanelContainer/MarginContainer/VBoxContainer/EditPanel" method="_on_save_button_pressed"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer/LineEdit" to="PanelContainer/MarginContainer/VBoxContainer/GuildSearch" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GuildSearch/VBoxContainer/SearchGuildButton" to="PanelContainer/MarginContainer/VBoxContainer/GuildSearch" method="_on_search_guild_button_pressed"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel/MarginContainer/VBoxContainer/LineEdit" to="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel/MarginContainer/VBoxContainer/Button" to="PanelContainer/MarginContainer/VBoxContainer/CreateGuildPanel" method="_on_button_pressed"]
